--- a/canvas/Makefile.top.in
+++ b/canvas/Makefile.top.in
@@ -86,7 +86,7 @@ regen: standalone-regen
 	@./config.status
 
 # --- pkgconfig ---------------------------------------------------------
-ALL_PKGCONFIG:=$module$.pc $(addsuffix .pc,@EXTRA_PKGCONFIG@)
+ALL_PKGCONFIG:=$module$.pc $module$-oprs.pc $(addsuffix .pc,@EXTRA_PKGCONFIG@)
 install:: $(ALL_PKGCONFIG)
 	$(MKINSTALLDIRS) $(libdir)/pkgconfig
 	$(INSTALL) $(ALL_PKGCONFIG) $(libdir)/pkgconfig
