Include configure.ac.user in configure.ac using m4_include. No need for separate configure.end and configure.begin files

--- a/canvas/Makefile.in
+++ b/canvas/Makefile.in
@@ -139,9 +139,8 @@ flist+=\
 
 # These are searched in builddir instead of srcdir
 genlist = \
-	autogen \
-	autoconf/configure.ac.begin \
-	autoconf/configure.ac.end
+	configure.ac \
+	autogen
 
 dirs=autoconf codels openprs server server/tcl server/openprs
 
@@ -179,3 +178,4 @@ distclean: clean
 
 .PHONY: depend
 depend:
+
