--- a/canvas/autogen.in
+++ b/canvas/autogen.in
@@ -1,17 +1,11 @@
 #! @PERL@ -w
 use strict;
 
-my $begin = "autoconf/configure.ac.begin";
-my $end = "autoconf/configure.ac.end";
 my $user = "configure.ac.user";
-my $final = "configure.ac";
-
-# Get options from the user file
-my ($email, $version, $use_cxx);
 
 sub check_aclocal_version {
     my ($major, $minor, $rev) = @_;
-    # We need aclocal >= 1.6
+    # We need aclocal >= 1.7
     my @version = `aclocal --version`;
 
     my $version_line = shift @version;
@@ -35,60 +29,7 @@ EOF
 
 }
     
-sub get_options {
-    open USER, $user or die("Unable to open $user for reading");
-    while (<USER>)
-    {
-        if (!$email && /\bEMAIL\s*=\s*(.*)/)
-        { $email = $1; }
-        if (!$version && /\bVERSION\s*=\s*(.*)/)
-        { $version = $1; }
-        if (!$use_cxx && /\bUSE_CXX\s*=\s*(.*)/)
-        { $use_cxx = $1; }
-    }
-    close USER;
-
-    $email = 'noone@nowhere' if (! $email);
-    $version = 1.0 if (! $version);
-    $use_cxx = 0 if (! $use_cxx);
-}
-
-sub build_autoconf_ac {
-    open AC, ">$final" or die("Unable to open $final for writing");
-    open AC_BEGIN, $begin or die("Unable top open $begin for reading");
-    while (<AC_BEGIN>)
-    {
-        s/\$email\$/\Q$email\E/;
-        s/\$version\$/\Q$version\E/;
-        s/\$use_cxx\$/\Q$use_cxx\E/;
-        print AC;
-    }
-    close AC_BEGIN;
-
-    print AC "
-dnl
-dnl ------- USER PART (configure.ac.user) -----------
-dnl
-dnl
-";
-
-    open USER, $user or die("Unable to open $user for reading");
-    while (<USER>) { print AC; }
-    close USER;
-
-    print AC "
-dnl
-dnl ------- END OF USER PART (configure.ac.user) -----------
-dnl
-dnl
-";
-
-    open AC_END, $end or die("Unable to open $end for reading");
-    while (<AC_END>) { print AC; }
-    close AC_END;
-}
-
-check_aclocal_version(1, 6, 0);
+check_aclocal_version(1, 7, 0);
 
 # Check for a few files (Genom -> OpenGenom migration)
 if ( ! -f $user || ! -f "autoconf/local.mk.in" || ! -f "codels/Makefile.in" ) {
@@ -97,19 +38,11 @@ if ( ! -f $user || ! -f "autoconf/local.mk.in" || ! -f "codels/Makefile.in" ) {
     exit
 }
 
-get_options
-
 print "
-
 Creating build environment ...
-
- * Building configure.ac
-";
-build_autoconf_ac
-
-print " * Running aclocal\n";
+  * Running aclocal\n";
 exit 1 if system("aclocal -I autoconf");
-print " * Running autoconf\n";
+print "  * Running autoconf\n";
 exit 1 if system("autoconf");
 
 print "
