--- a/canvas/autoconf/configure.ac.in
+++ b/canvas/autoconf/configure.ac.in
@@ -97,7 +97,7 @@ ifelse([$genTcl$], [yes], [ROBOT_LIB_TCL(@TCL_CONFIG_PATH@)], [])
 ifelse([$genOpenprs$], [yes], [
 	PKG_CHECK_MODULES(TRANSGEN, transgen)
 	PKG_CHECK_MODULES(OPENPRS, openprs)
-        AC_CONFIG_FILES([$module$-oprs.pc])
+        AC_CONFIG_FILES([$module$-oprs.pc:autoconf/$module$-oprs.pc.in])
 	], [])
 
 dnl --- Check for extra software ----------------------------------------
@@ -123,7 +123,7 @@ AC_SUBST(EXTRA_LIBS)
 $genomPackages$
 
 dnl ============ Include the user part
-m4_include([configure.ac.user])
+m4_include([../configure.ac.user])
 dnl ============ Include the user part (end)
 
 AC_SUBST(EXTRA_SUBDIRS)
@@ -134,8 +134,8 @@ AC_CONFIG_FILES(
 	[Makefile]
 	[codels/Makefile]
 	[server/Makefile]
-	[$module$.pc]
-	[local.mk:autoconf/local.mk.in]
+	[$module$.pc:autoconf/$module$.pc.in]
+	[local.mk]
 )
 
 for dir in $EXTRA_SUBDIRS; do
