VPATH -> vpath %.c to be sure to match only source files. Otherwise, in case of previous building directly in the sources dir, 'make' does not work any more (because the subdirs already exist in VPATH).

--- a/canvas/codels/Makefile.in
+++ b/canvas/codels/Makefile.in
@@ -38,7 +38,7 @@ srcdir=		@srcdir@
 builddir=       @builddir@
 
 INSTALL=  	@INSTALL@
-VPATH=	  	$(srcdir)
+vpath %.c  	$(srcdir)
 
 include $(top_builddir)/config.mk
 
