--- a/canvas/autoconf/configure.ac.in
+++ b/canvas/autoconf/configure.ac.in
@@ -82,21 +82,17 @@ AC_SUBST(LIBMATH, "${LIBS}")
 dnl --- checks for libraries --------------------------------------------
 dnl
 
-dnl Pocolibs
-PKG_CHECK_MODULES(POCOLIBS, pocolibs >= 2.0)
-AC_SUBST(POCOLIBS_CFLAGS)
-AC_SUBST(POCOLIBS_LIBS)
-
-dnl GenoM
-PKG_CHECK_MODULES(GENOM, genom >= @GENOM_MAJOR@.@GENOM_MINOR@ pocolibs >= 2.0)
+dnl GenoM and pocolibs
+PKG_CHECK_MODULES(GENOM, genom >= @GENOM_MAJOR@.@GENOM_MINOR@)
 AC_SUBST(GENOM_CFLAGS)
 AC_SUBST(GENOM_LIBS)
 
 dnl Tcl
 ifelse([$genTcl$], [yes], [ROBOT_LIB_TCL(@TCL_CONFIG_PATH@)], [])
+
+dnl transgen and oprs
 ifelse([$genOpenprs$], [yes], [
 	PKG_CHECK_MODULES(TRANSGEN, transgen)
-	PKG_CHECK_MODULES(OPENPRS, openprs)
         AC_CONFIG_FILES([$module$-oprs.pc:autoconf/$module$-oprs.pc.in])
 	], [])
 
