In some system, aclocal --version return major.minor-p5 for example We seem to not need to check for the revision because we only want to be at least 1.7.0 And >= 1.7.0 is equivalent to >= 1.7 I keep the old parsing code in order to restore the old check for revision number I change the error message for error of parsing of the result of aclocal --version because it was not explicit for a simple user.

--- a/canvas/autogen.in
+++ b/canvas/autogen.in
@@ -4,32 +4,32 @@ use strict;
 my $user = "configure.ac.user";
 
 sub check_aclocal_version {
-    my ($major, $minor, $rev) = @_;
+    my ($major, $minor) = @_;
     # We need aclocal >= 1.7
     my @version = `aclocal --version`;
 
     my $version_line = shift @version;
-    if ($version_line !~ /^aclocal \(GNU automake\) (\d+)\.(\d+)\.(\d+)$/) 
+    if (($version_line !~ /^aclocal \(GNU automake\) (\d+)\.(\d+)\.\d+$/)
+        && ($version_line !~ /^aclocal \(GNU automake\) (\d+)\.(\d+)-p\d$/)) 
     {
         print <<EOF;
 You don't seem to have a valid version of aclocal. I was expecting
-aclocal --version to return "aclocal (GNU automake) <version>", but
+aclocal --version to return "aclocal (GNU automake) <major>.<minor>.<revision>", but
 I got $version_line
 EOF
         exit;
     }
 
     if (($major > $1) 
-        || (($major eq $1) && ($minor > $2)) 
-        || (($minor eq $2) && ($rev > $3)))
+        || (($major eq $1) && ($minor > $2)))
     {
-        print "Unsupported aclocal version $1.$2.$3, you need at least $major.$minor.$rev\n";
+        print "Unsupported aclocal version $1.$2, you need at least $major.$minor\n";
         exit;
     }
 
 }
     
-check_aclocal_version(1, 7, 0);
+check_aclocal_version(1, 7);
 
 # Check for a few files (Genom -> OpenGenom migration)
 if ( ! -f $user || ! -f "local.mk.in" || ! -f "codels/Makefile.in" ) {
