2 major changes (sorry) :  - All the "*essay*" files, functions, libraries, processes, devices, etc    have been renamed "*test*".  - New management of the error messages (see h2errorLib in pocolibs)

--- a/canvas/Makefile.in
+++ b/canvas/Makefile.in
@@ -67,10 +67,11 @@ flist+=\
 	server/cntrlTask.c		\
 	server/connectLib.c		\
 	server/error.h			\
-	server/essay.c			\
-	server/essayCntrl.c		\
-	server/essayExec.c		\
-	server/essay_script		\
+	server/error.c			\
+	server/test.c			\
+	server/testCntrl.c		\
+	server/testExec.c		\
+	server/test_script		\
 	server/execTask.c		\
 	server/execTaskHeader.h		\
 	server/header.h			\
@@ -93,7 +94,6 @@ flist+=\
 	server/posterXMLLib.h		\
 	server/print.h			\
 	server/printXML.h		\
-	server/reports.h		\
 	server/requestCntrl.c		\
 	server/requestExec.c		\
 	server/scan.h			\
