--- a/canvas/autoconf/module-oprs.pc.in
+++ b/canvas/autoconf/module-oprs.pc.in
@@ -2,9 +2,9 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
 oprslibdir=@libdir@/openprs
-includedir=@includedir@/$module$
+includedir=@includedir@/$pkgname$
 
-Name: $module$-oprs
+Name: $pkgname$-oprs
 Description: $module$ Genom module
 Version: @PACKAGE_VERSION@
 Requires: genom >= $genomMajor$.$genomMinor$ $require$
