--- a/canvas/autoconf/config.mk.in
+++ b/canvas/autoconf/config.mk.in
@@ -75,13 +75,16 @@ MODULE_BIN=	$module$$(BINEXT)
 INIT_BIN=	$module$SendInitRqst$(BINEXT)
 TEST_BIN=	$module$Test$(BINEXT)
 
-# client libraries
+# client libraries. These are versioned using the abi_version in the .gen
+ABI_VERSION_INFO=	@ABI_VERSION_INFO@
 CLIENT_LIB=		lib$module$Client$(LIBEXT)
-MY_CLIENT_LIB=          $(GENOM_LIBS) $(abs_top_builddir)/server/$(OBJDIR)/$(CLIENT_LIB)
 TCLCLIENT_LIB=		lib$module$TclServ$(LIBEXT)
 OPENPRSCLIENT_LIB=	lib$module$Openprs$(LIBEXT)
 
-# libtool 'helper' libs -- static archives
+# Use that to link to our client library
+MY_CLIENT_LIB=          $(GENOM_LIBS) $(abs_top_builddir)/server/$(OBJDIR)/$(CLIENT_LIB)
+
+# libtool 'helper' libs -- static archives. Not installed
 MODULE_LIB=		lib$module$Server.la
 USER_LIB=		lib$module$Codels.la
 POSTERWRITE_LIB=	lib$module$PosterWrite.la
