New released version will be 1.2

--- a/configure.ac
+++ b/configure.ac
@@ -10,8 +10,8 @@ AC_CONFIG_HEADER(genom-config.h)
 
 PACKAGE=genom
 GENOM_MAJOR=1
-GENOM_MINOR=1
-GENOM_REV=B
+GENOM_MINOR=2
+GENOM_REV=
 GENOM_VERSION=${GENOM_MAJOR}.${GENOM_MINOR}${GENOM_REV}
 
 AC_SUBST(PACKAGE)
