Do not fail on recursion for the distclean target, as an interrupted distclean may have deleted some makefiles in the subdirs

--- a/canvas/Makefile.top.in
+++ b/canvas/Makefile.top.in
@@ -55,7 +55,7 @@ clean:
 
 .PHONY: distclean
 distclean:
-	$(MAKE) $@-$(OSAPI)
+	-$(MAKE) $@-$(OSAPI)
 	rm -f Makefile libtool config.log config.status $pkgname$.pc $pkgname$-oprs.pc local.mk config.mk
 
 
