--- a/canvas/autoconf/module.pc.in
+++ b/canvas/autoconf/module.pc.in
@@ -2,6 +2,9 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@/$pkgname$
+genomfile=$genomFile$
+genomflags=$genomFlags$
+cppflags=$cppOptions$
 
 Name: $pkgname$
 Description: $module$ Genom module
