Add a big fat warning about makefiles being overwritten unconditionaly. Mention existence of the user-install target in codels/Makefile.in

--- a/canvas/Makefile.top.in
+++ b/canvas/Makefile.top.in
@@ -1,4 +1,17 @@
 #	$LAAS$
+
+
+
+#  WARNING 
+#  WARNING 	DO NOT CHANGE ANYTHING IN THIS FILE
+#  WARNING 	it is replaced at each module generation
+#  WARNING
+#  WARNING      If you want to install additional files, use the user-install
+#  WARNING	target in codels/Makefile.in (see the comments in this file)
+#  WARNING 
+
+
+
 $commentbegin$
 
 #
