Disable RTAI support Add preliminary Xenomai 2.x support (using the POSIX skin)

--- a/canvas/Makefile.top.in
+++ b/canvas/Makefile.top.in
@@ -88,6 +88,9 @@ make_subdirs_osapi=\
 %-posix:
 	@OSAPI=posix; $(make_subdirs_osapi)
 
+%-xenomai:
+	@OSAPI=xenomai; $(make_subdirs_osapi)
+
 %-rtai:
 	@OSAPI=rtai;  $(make_subdirs_osapi)
 	@OSAPI=posix; $(make_subdirs_osapi)
