--- a/canvas/autoconf/config.mk.in
+++ b/canvas/autoconf/config.mk.in
@@ -123,6 +123,8 @@ LIBMATH=        @LIBMATH@
 RTAI_INC=	@RTAI_INC@
 KERNEL_INC=	@KERNEL_INC@
 
+XENO_CONFIG=	@XENO_CONFIG@
+
 TCL_CPPFLAGS=	@TCL_CPPFLAGS@
 TCL_LDFLAGS=	@TCL_LDFLAGS@ @TCL_LIB_FLAG@ @TCL_LIBS@
 
