--- a/config.mk.in
+++ b/config.mk.in
@@ -75,8 +75,9 @@ OS_LIBS=	@OS_LIBS@
 PORTLIB_CFLAGS=	@PORTLIB_CFLAGS@
 PORTLIB_LIBS=	@PORTLIB_LIBS@
 
-RTAI_INC=	@RTAI_INC@
-LNXKERN_INC=	@LNXKERN_INC@
+XENO_CONFIG=	@XENO_CONFIG@
+XENO_CFLAGS=	@XENO_CFLAGS@
+XENO_LDFLAGS=	@XENO_LDFLAGS@
 
 HAS_TCL=	@HAS_TCL@
 TCL_CPPFLAGS=	@TCL_CPPFLAGS@
