--- a/canvas/Makefile.in
+++ b/canvas/Makefile.in
@@ -56,6 +56,7 @@ flist=\
 	autoconf/genom.mk		\
 	autoconf/config.posix.mk	\
 	autoconf/config.rtai.mk		\
+	autoconf/config.xenomai.mk	\
 	autoconf/config.mk.in           \
 	autoconf/codels.mk		\
 	autoconf/module.pc.in		\
