--- a/canvas/autoconf/configure.ac.in
+++ b/canvas/autoconf/configure.ac.in
@@ -39,36 +39,25 @@ AC_CHECK_HEADERS(sys/cdefs.h)
 AC_C_BIGENDIAN([ENDIANNESS=-DWORDS_BIGENDIAN], [ENDIANNESS=])
 AC_SUBST(ENDIANNESS)
 
-
-dnl --- RTAI support ----------------------------------------------------
+dnl --- Xenomai support -------------------------------------------------
 dnl
 
-# configure options
-AC_ARG_WITH(rtai,
-           AC_HELP_STRING([--with-rtai=yes|no],
-               [configure to use RTAI]),
-           [opt_rtai=$withval],[opt_rtai=no])
-AC_ARG_WITH(rtai-includes,
-           AC_HELP_STRING([--with-rtai-includes=DIR],
-               [RTAI headers are in DIR]),
-           [opt_rtai_includes=$withval])
-AC_ARG_WITH(kernel-includes,
-           AC_HELP_STRING([--with-kernel-includes=DIR],
-               [linux kernel headers are in DIR]),
-           [opt_kernel_includes=$withval])
+OSAPI=posix
+AC_ARG_WITH(xenomai,
+	AC_HELP_STRING([--with-xenomai=yes|no], [configure to use Xenomai]),
+	[opt_xenomai=$withval],[opt_xenomai=no])
+AC_ARG_VAR([XENO_CONFIG], [Path to the xeno-config command for xenomai])
 
-# make related stuff
-if test "x$opt_rtai" = "xyes"; then
-   OSAPI=rtai
-   AC_MSG_RESULT([Configuring to use RTAI])
-   AC_CHECK_RTAI_INCLUDES(RTAI_INC, $opt_rtai_includes)
-   AC_CHECK_LINUXKERNEL_INCLUDES(KERNEL_INC, $opt_kernel_includes)
-
-elif test "x$opt_rtai" = "xno"; then :
-   OSAPI=posix
-   AC_MSG_RESULT([Configuring to use POSIX])
-else
-   AC_MSG_ERROR([invalid option --with-rtai=$opt_rtai], 2)
+if test "x$opt_xenomai" = "xyes"; then
+	AC_PATH_PROG([XENO_CONFIG], [xeno-config], [no],
+		[/usr/xenomai/bin:${PATH}])
+	if test "x$XENO_CONFIG" = "xno" ; then
+		AC_MSG_FAILURE([--with-xenomai=yes specified, but xeno-config not found])
+		opt_xenomai=no
+	else
+		AC_MSG_RESULT([Configuring to use Xenomai])
+		OSAPI=xenomai
+	fi
 fi
 AC_SUBST(OSAPI)
 
