More portable shell constructions to test that files are changed. Solaris's /bin/sh doesn't understand 'if ! cmp ... '

--- a/include/Makefile.in
+++ b/include/Makefile.in
@@ -67,9 +67,8 @@ all:;
 install: all
 	$(MKINSTALLDIRS) $(includedir)/genom
 	@for f in $(flist); do						\
-		if ! cmp -s $(srcdir)/$$f $(includedir)/$$f; then \
-				$(INSTALL_DATA) $(srcdir)/$$f $(includedir)/$$f;	\
-		fi; \
+		cmp -s $(srcdir)/$$f $(includedir)/$$f || \
+			$(INSTALL_DATA) $(srcdir)/$$f $(includedir)/$$f; \
 	done
 
 .PHONY: clean
